--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -14,21 +14,21 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
+      - name: Checkout
         uses: actions/checkout@v5.0.0
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
 
-      - name: Setup Node.js 
+      - name: Setup Node.js
         uses: actions/setup-node@v3.9.1
         with:
           node-version-file: ".nvmrc"
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: npm install
 
-      - name: Build website 
+      - name: Build website
         run: npm run build
 
-      - name: Deploy to Staging
-        run: npm run stage
+      - name: Deploy to Production
+        run: npm run deploy
