--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "image-size": "^1.0.2",
     "merge": "^2.1.1",
     "node-notifier": "^10.0.1",
-    "sass": "^1.80.6",
+    "node-sass": "^8.0.0",
     "png-to-ico": "^2.1.8",
     "svgo": "^3.0.2",
     "uglify-js": "^3.17.4",
@@ -77,7 +77,7 @@
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^4.0.0",
     "webp-converter": "^2.3.3",
-    "xxhashjs": "^0.2.2"
+    "xxhash": "^0.3.0"
   },
   "engines": {
     "node": "^18.12.1 || >=20",
