--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy": "NODE_ENV=production node s3-uploader.js",
     "lint:build": "npx eslint build/** --fix",
     "lint:src": "npx eslint src/js/** --fix",
-    "preview-production": "node preview-production.js",
+    "preview:production": "node preview-production.js",
+    "preview": "node index.js",
     "scaffold": "node scaffold.js",
     "stage": "node s3-uploader.js",
     "start": "node index.js"
